# fileseqmini

./: CMakeLists.txt  LICENSE  README.md
include/: fileseqmini.hpp
misc/: fileseq.cpp  test.cpp  test.suite
